--- a/views/partials/toolbar.ejs
+++ b/views/partials/toolbar.ejs
@@ -1,5 +1,5 @@
 <div id="toolbar">
-    <h1 class="customTitle">Nightscout</h1>
+    <h1 class="customTitle">Маловичко Никита</h1>
 
     <%if (type !== 'index') { %>
         <a href="/" class="closeButton button-close"><span>X</span></a>
